--- a/style.css
+++ b/style.css
@@ -8,15 +8,16 @@ body {
   height: 100vh;
   display: flex;
   justify-content: center;
-  margin-top: 50px;
-  background-color: #00b9ec;
+  align-items: center;
+  background-color: #334;
+  border: none;
+
 }
 
 .game {
-  border-bottom: 2px solid 74E1FF;
-  border-radius: 10px;;
-  height: 300px;
-  width: 80%;
+  border: none;
+  height: 50%;
+  width: 100%;
   position: relative;
   overflow: hidden;
   background-color: #f7f7f7;
