--- a/style.css
+++ b/style.css
@@ -24,9 +24,16 @@ body {
   background-image: url(img/bg.png);
 }
 
-.score {
+.title {
   position: absolute;
   top: 30px;
+  left: 20px;
+  color: #334;
+}
+
+.score {
+  position: absolute;
+  top: 100px;
   left: 20px;
   font-size: x-large;
   color: #334;
